tests/NormalTests/paczka1/fuzzy1/42720260.err
Error in line 4: ohQp A606 15,2
Error in line 5: ohQp A393 25,0
Error in line 9: PzRd9M S747 91,59
Error in line 10: zDt S195 28,55
Error in line 2: PzRd9M A606 58,6
Error in line 16: S747 A393 99,9
Error in line 7: zDt A606 46,0
